# modeflow

files/: CMakeLists.txt  README.md  adk-schema.sql
files/doc/: checklist.txt  modeflowTrainning.pptx  sprints  testfile.txt  work_allocation
files/doc/logicUML/: Campfire.uml  R1Indication.uml  RivianR1.uml
files/doc/scripts/: checkhibernate.sh  r1_db_manager.py
files/doc/specs/Light Behavior/: Light_Feedback.aep
files/src/: CMakeLists.txt  adk.modeflow.db  avs.cc  bat.cc  bt.cc  devpower.cc  external.cc  flowdspsocket.cc  misc.cc  monitormfl.sh  msg_proc_thread.cc  ota.cc  otamode.cc  playerstate.cc  playpause.cc  setcrosscompile.sh  sethostcomiple.sh  source.cc  sourcecheck.sh  toolchain.cmake  volume.cc  x86test.sh
files/src/actuator/: actuators.cc  faultM.cc
files/src/arm/: adk_adaptor.cc  main.cc  utils.cc
files/src/charging/: bq25703_drv.cc  bq25703_drv.h  bq40z50_interface.cc  bq40z50_interface.h  gpio_config.cc  tps65987_interface.cc  tps65987_interface.h
files/src/controller/: indication.cc  lantern.cc
files/src/include/: actuators.h  adk_adaptor.h  amptemp.h  avs.h  bat.h  bt.h  devpower.h  external.h  fautM.h  flowdspsocket.h  gpio.h  indication.h  lantern.h  led.h  libasound.so.2.0.0  misc.h  msg_proc_thread.h  ota.h  otamode.h  playerstate.h  playpause.h  que.h  volume.h
files/src/libmodeflow/: modeflow.cc  modeflow.h
files/src/sensor/: amptemp.cc  gpio.cc
files/src/x86/: debug_main.cc  x86_utils.cc
